<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.esotericsoftware</groupId>
	<artifactId>reflectasm</artifactId>
	<version>1.11.1-SNAPSHOT</version>
	<packaging>bundle</packaging>
	<name>ReflectASM</name>
	<description>High performance Java reflection using code generation</description>
	<url>https://github.com/EsotericSoftware/reflectasm</url>

	<licenses>
		<license>
			<name>New BSD License</name>
			<url>http://www.opensource.org/licenses/bsd-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/EsotericSoftware/reflectasm</url>
		<connection>scm:git:git@github.com:EsotericSoftware/reflectasm.git</connection>
		<developerConnection>scm:git:git@github.com:EsotericSoftware/reflectasm.git</developerConnection>
	</scm>

	<developers>
		<developer>
			<id>nathan.sweet</id>
			<name>Nathan Sweet</name>
			<email>nathan.sweet@gmail.com</email>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- These properties will be set by the Maven Dependency plugin -->
		<errorProneJavac>${com.google.errorprone:javac:jar}</errorProneJavac>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.ow2.asm</groupId>
			<artifactId>asm</artifactId>
			<version>5.0.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Annotations from the Checker Framework: nullness, interning, locking, ... -->
		<dependency>
			<groupId>org.checkerframework</groupId>
			<artifactId>checker-qual</artifactId>
			<version>3.11.1-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.google.errorprone</groupId>
			<artifactId>javac</artifactId>
			<version>9+181-r4173-1</version>
		</dependency>
	</dependencies>

	<build>
		<!-- Set nonstandard source and test source dirs -->
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>

		<plugins>
     			 <plugin>
        			<groupId>org.apache.maven.plugins</groupId>
        			<artifactId>maven-compiler-plugin</artifactId>
					 <version>3.8.1</version>
        			<configuration>
          				<source>1.8</source>
          				<target>1.8</target>
						<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
						<compilerArguments>
							<Xmaxerrs>10000</Xmaxerrs>
							<Xmaxwarns>10000</Xmaxwarns>
						</compilerArguments>
						<annotationProcessorPaths>
							<path>
								<groupId>org.checkerframework</groupId>
								<artifactId>checker</artifactId>
								<version>3.11.1-SNAPSHOT</version>
							</path>
						</annotationProcessorPaths>
						<annotationProcessors>
							<!-- Add all the checkers you want to enable here -->
							<annotationProcessor>org.checkerframework.checker.determinism.DeterminismChecker</annotationProcessor>
						</annotationProcessors>
						<compilerArgs>
							<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
						    <arg>-AusePolyDefault</arg>
						</compilerArgs>
        			</configuration>
      			</plugin>
			<!-- Disable resources (project has none) -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<executions>
					<execution>
						<id>default-resources</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>default-testResources</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<excludes>
						<exclude>**/.svn/*</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<!-- remove all classes of dependencies that are not used by the project -->
							<minimizeJar>true</minimizeJar>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>shaded</shadedClassifierName>
							<relocations>
								<relocation>
									<pattern>org.objectweb.asm</pattern>
									<shadedPattern>com.esotericsoftware.reflectasm.shaded.org.objectweb.asm</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.5.0</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Export-Package>com.esotericsoftware.reflectasm*</Export-Package>
					</instructions>
				</configuration>
			</plugin>

			<plugin>
				<!-- This plugin will set properties values using dependency information -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>checkerframework</id>
			<activation>
				<jdk>[1.8,13)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<fork>true</fork> <!-- Must fork or else JVM arguments are ignored. -->
							<compilerArguments>
								<Xmaxerrs>10000</Xmaxerrs>
								<Xmaxwarns>10000</Xmaxwarns>
							</compilerArguments>
							<annotationProcessorPaths>
								<path>
									<groupId>org.checkerframework</groupId>
									<artifactId>checker</artifactId>
									<version>3.11.1-SNAPSHOT</version>
								</path>
							</annotationProcessorPaths>
							<annotationProcessors>
								<!-- Add all the checkers you want to enable here -->
								<annotationProcessor>org.checkerframework.checker.determinism.DeterminismChecker</annotationProcessor>
							</annotationProcessors>
							<compilerArgs>
								<arg>-AusePolyDefault</arg>
								<!-- <arg>-Awarns</arg> --> <!-- -Awarns turns type-checking errors into warnings. -->
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.checkerframework</groupId>
					<artifactId>checker</artifactId>
					<version>3.11.1-SNAPSHOT</version>
				</dependency>
			</dependencies>
		</profile>

		<profile>
			<id>checkerframework-jdk8</id>
			<activation>
				<jdk>1.8</jdk>
			</activation>
			<!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
			<properties>
				<javac.version>9+181-r4173-1</javac.version>
			</properties>
			<dependencies>
				<dependency>
					<groupId>com.google.errorprone</groupId>
					<artifactId>javac</artifactId>
					<version>9+181-r4173-1</version>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-Xbootclasspath/p:${annotatedJdk}</arg>
								<arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>checkerframework-jdk11</id>
			<activation>
				<jdk>11</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<fork>true</fork>
							<compilerArgs combine.children="append">
								<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
							</compilerArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<properties>
				<!-- Temporary until animal-sniffer-maven-plugin is released with https://github.com/mojohaus/animal-sniffer/pull/91.
                     Version 1.19 is broken:  https://github.com/mojohaus/animal-sniffer/issues/76. -->
				<animal.sniffer.skip>true</animal.sniffer.skip>
			</properties>
		</profile>
	</profiles>
</project>
